--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-photo-album": "^3.0.2",
     "react-router-dom": "^7.0.1",
     "styled-components": "^6.1.13"
